--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
-FROM node:18-alpine
-WORKDIR /app
-COPY . .
-RUN npm install
-CMD ["node", "backend/server.js"]
+# FROM node:18-alpine
+# WORKDIR /app
+# COPY . .
+# RUN npm install
+# CMD ["node", "backend/server.js"]
